--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,7 +25,7 @@ click_interval 0.18
 
 input_delay 1
 
-background_opacity 0.9
+background_opacity 0.90
 
 
 # keyboard shortcuts ----------------------------------------------------------
@@ -51,9 +51,9 @@ map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=ta
 # map shift+enter send_text all \x1b[13;2u
 # map ctrl+enter send_text all \x1b[13;5u
 # F13 cf http://aperiodic.net/phil/archives/Geekery/term-function-keys.html
-map ctrl+9 send_text all \x1b[25~
+#map ctrl+9 send_text all \x1b[25~
 # F14
-map ctrl+0 send_text all \x1b[26~
+#map ctrl+0 send_text all \x1b[26~
 map ctrl+. send_text all 
 
 
@@ -74,7 +74,7 @@ listen_on unix:@kittyc1748
 # colors ----------------------------------------------------------------------
 
 foreground        #EEEEEE
-color0            #1E1E1E
+color0            #3E3E3E
 color1            #C9205A
 color2            #00AC07
 color3            #C97C00
