--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,7 +25,8 @@ click_interval 0.18
 
 input_delay 1
 
-background_opacity 0.90
+#background_opacity 0.90
+dynamic_background_opacity yes
 
 
 # keyboard shortcuts ----------------------------------------------------------
@@ -43,10 +44,13 @@ map kitty_mod+enter new_window_with_cwd
 map kitty_mod+t new_tab_with_cwd !neighbor
 map kitty_mod+d detach_window new-tab
 
+map ctrl+shift+up   set_background_opacity -0.12
+map ctrl+shift+down set_background_opacity +0.12
+
 # AltGr + f for file hints
 map ø kitten hints --hints-text-color 'yellow' --type path --program -
 
-map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=tab less +G -R
+#map f1 @ launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=tab less +G -R
 
 # map shift+enter send_text all \x1b[13;2u
 # map ctrl+enter send_text all \x1b[13;5u
@@ -74,6 +78,7 @@ listen_on unix:@kittyc1748
 # colors ----------------------------------------------------------------------
 
 foreground        #EEEEEE
+background		  #101010
 color0            #3E3E3E
 color1            #C9205A
 color2            #00AC07
