--- a/.config/kitty/open-actions.conf
+++ b/.config/kitty/open-actions.conf
@@ -3,12 +3,12 @@
 # by the hyperlink_grep kitten and nothing else so far.
 protocol file
 fragment_matches [0-9]+
-action launch --type=overlay vim +${FRAGMENT} ${FILE_PATH}
+action launch --type=overlay nvim +${FRAGMENT} ${FILE_PATH}
 
 # Open text files without fragments in the editor
 protocol file
 mime text/*
-action launch --type=overlay vim ${FILE_PATH}
+action launch --type=overlay nvim ${FILE_PATH}
 
 # Open directories
 protocol file
