--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -78,7 +78,7 @@ listen_on unix:@kittyc1748
 # colors ----------------------------------------------------------------------
 
 foreground        #EEEEEE
-background		  #101010
+background		  #0a0a0a
 color0            #3E3E3E
 color1            #C9205A
 color2            #00AC07
