--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -44,13 +44,19 @@ map kitty_mod+enter new_window_with_cwd
 map kitty_mod+t new_tab_with_cwd !neighbor
 map kitty_mod+d detach_window new-tab
 
+map kitty_mod+y paste_from_selection
+
 map ctrl+shift+up   set_background_opacity -0.12
 map ctrl+shift+down set_background_opacity +0.12
 
 # AltGr + f for file hints
 map ø kitten hints --hints-text-color 'yellow' --type path --program -
 
-#map f1 @ launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=tab less +G -R
+# Alt + , for pasting last output
+map alt+, combine : launch --stdin-source=@last_cmd_output --type=primary : paste_from_selection
+
+
+map f3 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=tab less +G -R
 
 # map shift+enter send_text all \x1b[13;2u
 # map ctrl+enter send_text all \x1b[13;5u
@@ -69,7 +75,8 @@ confirm_os_window_close -1
 
 scrollback_lines 100000
 #scrollback_pager vim-ansi -c "autocmd BufRead * normal G"
-scrollback_pager nvim -c "set nonumber nolist foldcolumn=0 noruler" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+#scrollback_pager nvim -c "set nonumber nolist foldcolumn=0 noruler" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+scrollback_pager nvim -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
 
 allow_remote_control yes
 listen_on unix:@kittyc1748
