--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -38,6 +38,7 @@ map ctrl+shift+, resize_window narrower
 
 map ctrl+page_down next_tab
 map ctrl+page_up previous_tab
+map f13 previous_tab
 map ctrl+F4 close_window
 map ctrl+shift+0 restore_font_size
 map kitty_mod+enter new_window_with_cwd
@@ -50,7 +51,8 @@ map ctrl+shift+up   set_background_opacity -0.12
 map ctrl+shift+down set_background_opacity +0.12
 
 # AltGr + f for file hints
-map ø kitten hints --hints-text-color 'yellow' --type path --program -
+#map ø kitten hints --hints-text-color 'yellow' --type path --program -
+map oslash kitten hints --hints-text-color 'yellow' --type path --program -
 
 # Alt + , for pasting last output
 map alt+, combine : launch --stdin-source=@last_cmd_output --type=primary : paste_from_selection
