--- a/.config/libinput-gestures.conf
+++ b/.config/libinput-gestures.conf
@@ -152,9 +152,63 @@
 # PINCH GESTURES:
 ###############################################################################
 
-# GNOME SHELL open/close overview (works for GNOME on Xorg only)
-gesture pinch in 2	zsh -c 'if [ "$(xwininfo -id $(xdotool getactivewindow) | grep geometry)" = "  -geometry 1920x1080+0+0" ]; then case $(tr "\0" " " < /proc/$(xdotool getactivewindow getwindowpid)/cmdline) in "/usr/bin/vlc "*) xte "key F";; "xournalpp "*) xte "key F11";; *) wmctrl -r ":ACTIVE:" -b remove,fullscreen;; esac; else wmctrl -r ":ACTIVE:" -b remove,maximized_vert,maximized_horz; fi'
-gesture pinch out 2	ydotool key --key-delay 0 0 125:1 103:1 103:0 125:0
+# pinch 2 in
+#
+# window=$(xdotool getactivewindow)
+# state=$(xprop -id $window | grep "^_NET_WM_STATE(ATOM) =")
+# if [ -n "$(echo $state | grep _NET_WM_STATE_FULLSCREEN)" ]; then
+# 	case $(xprop -id $window WM_CLASS | cut -d "\"" -f 4) in
+# 		vlc)
+# 			ydotool key --key-delay 0 33:1 33:0 
+# 			;;
+# 		xournalpp)
+# 			ydotool key --key-delay 0 87:1 87:0 
+# 			;;
+# 		kitty)
+# 			ydotool key --key-delay 0 29:1 42:1 87:1 87:0 42:0 29:0
+# 			;;
+# 		*)
+# 			wmctrl -r ":ACTIVE:" -b remove,fullscreen 
+# 			;;
+# 	esac
+# else
+# 	wmctrl -r ":ACTIVE:" -b remove,maximized_vert,maximized_horz
+# fi
+gesture pinch in 2 sh -c 'window=$(xdotool getactivewindow); state=$(xprop -id $window | grep "^_NET_WM_STATE(ATOM) ="); if [ -n "$(echo $state | grep _NET_WM_STATE_FULLSCREEN)" ]; then case $(xprop -id $window WM_CLASS | cut -d "\"" -f 4) in vlc) ydotool key --key-delay 0 33:1 33:0 ;; xournalpp) ydotool key --key-delay 0 87:1 87:0 ;; kitty) ydotool key --key-delay 0 29:1 42:1 87:1 87:0 42:0 29:0 ;; *) wmctrl -r ":ACTIVE:" -b remove,fullscreen ;; esac else wmctrl -r ":ACTIVE:" -b remove,maximized_vert,maximized_horz; fi'
+
+# pinch 2 out
+#
+# window=$(xdotool getactivewindow)
+# state=$(xprop -id $window | grep "^_NET_WM_STATE(ATOM) =")
+# if [ -n "$(echo $state | grep "_NET_WM_STATE_FULLSCREEN")" ]; then :;
+# elif [ -n "$(echo $state | grep "_NET_WM_STATE_MAXIMIZED_HORZ, _NET_WM_STATE_MAXIMIZED_VERT")" ]; then
+# 	case $(xprop -id $window WM_CLASS | cut -d "\"" -f 4) in
+# 		vlc)
+# 			ydotool key --key-delay 0 33:1 33:0 # f
+# 			;;
+# 		xournalpp)
+# 			ydotool key --key-delay 0 87:1 87:0 # f11
+# 			;;
+# 		firefox)
+# 			if [ -n "$(xprop -id $window WM_NAME | grep -iP "fmovies|youtube|tagesschau|prime video")" ]; then
+# 				ydotool key --key-delay 0 33:1 33:0 # f
+# 			else
+# 				ydotool key --key-delay 0 87:1 87:0 # f11
+# 			fi
+# 			;;
+# 		kitty)
+# 			ydotool key --key-delay 0 29:1 42:1 87:1 87:0 42:0 29:0 # ctrl+shift+f11
+# 			;;
+# 		*)
+# 			wmctrl -r ":ACTIVE:" -b add,fullscreen
+# 			;;
+# 	esac
+# else
+# 	wmctrl -r ":ACTIVE:" -b add,maximized_vert,maximized_horz
+# fi
+
+
+gesture pinch out 2	sh -c 'window=$(xdotool getactivewindow); state=$(xprop -id $window | grep "^_NET_WM_STATE(ATOM) ="); if [ -n "$(echo $state | grep "_NET_WM_STATE_FULLSCREEN")" ]; then :; elif [ -n "$(echo $state | grep "_NET_WM_STATE_MAXIMIZED_HORZ, _NET_WM_STATE_MAXIMIZED_VERT" | grep -v "_NET_WM_STATE_FULLSCREEN")" ]; then case $(xprop -id $window WM_CLASS | cut -d "\"" -f 4) in vlc) ydotool key --key-delay 0 33:1 33:0 ;; xournalpp) ydotool key --key-delay 0 87:1 87:0 ;; firefox) if [ -n "$(xprop -id $window WM_NAME | grep -iP "fmovies|youtube|tagesschau|prime video")" ]; then ydotool key --key-delay 0 33:1 33:0; else ydotool key --key-delay 0 87:1 87:0; fi ;; kitty) ydotool key --key-delay 0 29:1 42:1 87:1 87:0 42:0 29:0 ;; *) wmctrl -r ":ACTIVE:" -b add,fullscreen ;; esac else wmctrl -r ":ACTIVE:" -b add,maximized_vert,maximized_horz; fi'
 
 # KDE Plasma open/close overview
 # gesture pinch in	xdotool key ctrl+F9
