--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim: ft=config
 # font ------------------------------------------------------------------------
 
-font_family       JuliaMono Regular
+font_family       JuliaMono Medium
 font_size         12
 bold_font         JuliaMono Black
 italic_font       JuliaMono MediumItalic
@@ -15,10 +15,20 @@ bold_italic_font  JuliaMono BlackItalic
 adjust_line_height 100% 
 
 tab_bar_edge top
-tab_bar_style powerline
-tab_powerline_style slanted
 draw_minimal_borders yes
 resize_in_steps yes
+
+tab_bar_style custom
+# tab_bar_style fade
+#tab_separator "⎸"
+tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{str(num_windows) + ' ' if num_windows > 1 else ''}{title}"
+#active_tab_title_template "{fmt.fg.tab}{title}"
+
+active_tab_foreground   #000
+active_tab_background   #eee
+active_tab_font_style   bold
+inactive_tab_foreground #c4c4c4
+inactive_tab_background #444
 
 url_style single
 click_interval 0.18
@@ -37,28 +47,31 @@ map ctrl+shift+. resize_window wider
 map ctrl+shift+, resize_window narrower
 
 map ctrl+page_down next_tab
+map ctrl+shift+page_up move_tab_backward
+map ctrl+shift+page_down move_tab_forward
 map ctrl+page_up previous_tab
 map f13 previous_tab
+
 map ctrl+F4 close_window
 map ctrl+shift+0 restore_font_size
 map kitty_mod+enter new_window_with_cwd
 map kitty_mod+t new_tab_with_cwd !neighbor
 map kitty_mod+d detach_window new-tab
+map kitty_mod+alt+a detach_window ask
 
-map kitty_mod+y paste_from_selection
+map kitty_mod+p paste_from_selection
 
 map ctrl+shift+up   set_background_opacity -0.12
 map ctrl+shift+down set_background_opacity +0.12
 
 # AltGr + f for file hints
 #map ø kitten hints --hints-text-color 'yellow' --type path --program -
-map oslash kitten hints --hints-text-color 'yellow' --type path --program -
+map oslash kitten hints --hints-text-color 'yellow' --hints-background-color 'blue' --hints-foreground-color 'white' --type path --program -
 
 # Alt + , for pasting last output
 map alt+, combine : launch --stdin-source=@last_cmd_output --type=primary : paste_from_selection
 
-
-map f3 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=tab less +G -R
+map ctrl+shift+/ launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
 
 # map shift+enter send_text all \x1b[13;2u
 # map ctrl+enter send_text all \x1b[13;5u
@@ -71,20 +84,23 @@ map ctrl+. send_text all
 
 # general config --------------------------------------------------------------
 
-enabled_layouts tall:bias=50;full_size=1;mirrored=false,fat,grid,horizontal,vertical
+enabled_layouts tall:bias=50;full_size=1;mirrored=false,fat,grid,horizontal,vertical,stack
 
 confirm_os_window_close -1
+map ctrl+f4 close_window_with_confirmation ignore-shell
 
-scrollback_lines 100000
+scrollback_lines 200000
 #scrollback_pager vim-ansi -c "autocmd BufRead * normal G"
 #scrollback_pager nvim -c "set nonumber nolist foldcolumn=0 noruler" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
-scrollback_pager nvim -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+scrollback_pager nvim -n -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "set nonu" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+
 
 allow_remote_control yes
 listen_on unix:@kittyc1748
 
 
 # colors ----------------------------------------------------------------------
+inactive_text_alpha 0.75
 
 foreground        #EEEEEE
 background		  #0a0a0a
