--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,6 +7,49 @@ bold_font         JuliaMono Black
 italic_font       JuliaMono MediumItalic
 bold_italic_font  JuliaMono BlackItalic
 
+# patch with nerd font --------------------------------------------------------
+
+# IEC Power Symbols
+symbol_map U+23fb-U+23fe,U+2b58 JuliaMono Nerd Font
+
+# Powerline
+symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 JuliaMono Nerd Font
+
+# Powerline Extra
+symbol_map U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d4,U+e0ca JuliaMono Nerd Font
+
+# Seti-UI + Custom
+# this one has the (simple) vim icon
+symbol_map U+e5fa-U+e631 JuliaMono Nerd Font
+
+# Devicons
+symbol_map U+e700-U+e7c5 JuliaMono Nerd Font
+
+# Font awesome
+symbol_map U+f000-U+f2e0 JuliaMono Nerd Font
+
+# Font awesome extension
+symbol_map U+e200-U+e2a9 JuliaMono Nerd Font
+
+# Octicons
+symbol_map U+f400-U+f4a8,U+2665,U+26A1,U+f27c JuliaMono Nerd Font
+
+#  Material Design Icons
+symbol_map U+f500-U+fd46 JuliaMono Nerd Font
+
+# Font Logos
+symbol_map U+f300-U+f32f JuliaMono Nerd Font
+
+# Weather Icons
+symbol_map U+e300-U+e3eb JuliaMono Nerd Font
+
+# Misc Code Point Fixes
+symbol_map U+21b5,U+25b8,U+2630,U+2632,U+e0a3 JuliaMono Nerd Font
+
+# Codicons
+symbol_map U+ea60-U+ebeb JuliaMono Nerd Font
+
+
 #Other fonts: Sauce Code Pro Nerd Font Mono, Hack Regular, Fira Code Regular 
 
 
@@ -21,7 +64,7 @@ resize_in_steps yes
 tab_bar_style custom
 # tab_bar_style fade
 #tab_separator "⎸"
-tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{str(num_windows) + ' ' if num_windows > 1 else ''}{title}"
+tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{str(num_windows) + ' ' if num_windows > 1 else ''}{(chr(0xe62b) + ' ' + title[3:]).strip() if title.startswith('vi:') else title}"
 #active_tab_title_template "{fmt.fg.tab}{title}"
 
 active_tab_foreground   #000
@@ -54,8 +97,10 @@ map f13 previous_tab
 
 map ctrl+F4 close_window
 map ctrl+shift+0 restore_font_size
-map kitty_mod+enter new_window_with_cwd
-map kitty_mod+t new_tab_with_cwd !neighbor
+# map kitty_mod+enter new_window_with_cwd
+map kitty_mod+enter launch --type=window --cwd=last_reported
+# map kitty_mod+t new_tab_with_cwd !neighbor
+map kitty_mod+t launch --type=tab --cwd=last_reported --location=neighbor
 map kitty_mod+d detach_window new-tab
 map kitty_mod+alt+a detach_window ask
 
@@ -71,7 +116,11 @@ map oslash kitten hints --hints-text-color 'yellow' --hints-background-color 'bl
 # Alt + , for pasting last output
 map alt+, combine : launch --stdin-source=@last_cmd_output --type=primary : paste_from_selection
 
-map ctrl+shift+/ launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
+# map kitty_mod+/      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
+
+map ctrl+shift+/ combine : launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R : send_text normal,application /
+
+map ctrl+alt+f launch --type=overlay --stdin-source=@screen_scrollback fzf --info inline --no-sort --bind "ctrl-y:execute-silent(echo -n {} | xclip -i -selection primary),ctrl-h:backward-kill-word" --exact -i
 
 # map shift+enter send_text all \x1b[13;2u
 # map ctrl+enter send_text all \x1b[13;5u
@@ -92,7 +141,7 @@ map ctrl+f4 close_window_with_confirmation ignore-shell
 scrollback_lines 200000
 #scrollback_pager vim-ansi -c "autocmd BufRead * normal G"
 #scrollback_pager nvim -c "set nonumber nolist foldcolumn=0 noruler" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
-scrollback_pager nvim -n -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "set nonu" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+scrollback_pager vi -n -R -c "let g:pager_mode = 1" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "set nonu nornu" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
 
 
 allow_remote_control yes
@@ -100,9 +149,9 @@ listen_on unix:@kittyc1748
 
 
 # colors ----------------------------------------------------------------------
-inactive_text_alpha 0.75
+inactive_text_alpha 0.8
 
-foreground        #EEEEEE
+foreground        #F0F0F0
 background		  #0a0a0a
 color0            #3E3E3E
 color1            #C9205A
